--- a/Task 1/requirements.txt
+++ b/Task 1/requirements.txt
@@ -1,20 +1,7 @@
 # requirements.txt
-aiohttp==3.9.5
-aiosignal==1.3.2
-attrs==25.3.0
-certifi==2025.4.26
-charset-normalizer==3.4.2
-contourpy==1.3.2
-cycler==0.12.1
-fonttools==4.57.0
-frozenlist==1.6.0
-idna==3.10
-iniconfig==2.1.0
-kiwisolver==1.4.8
-matplotlib==3.9.4
-multidict==6.4.3
-numpy==1.26.4
-packaging==25.0
-pandas==2.2.3
-pillow==11.2.1
-pluggy==1.5.0
+numpy>=1.24
+pandas>=2.2
+matplotlib>=3.8
+scipy>=1.11
+requests>=2.31
+websockets>=11
